@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <install>
-    <folders export="MAIL_LOG_CONVERT_PATH">${INST_PREF}/usr/sbin</folders>
+    <folders export="MAIL_LOG_CONVERT_PATH">${INST_PREF}/usr/local/sbin</folders>
     <copy>${MAIL_LOG_CONVERT_PATH}/maillogconvert.pl</copy>
     <copy>${SYSTEM_ENGINE_ROOT}/traffic/imscp-srv-traff</copy>
     <copy>${SYSTEM_ENGINE_ROOT}/traffic/imscp-vrl-traff</copy>
